syntax = "proto3";

package eupho;

import "pet.proto";

service Eupho {
	rpc GetTest(GetTestRequest) returns (GetTestResponse) {}
	rpc Result(ResultRequest) returns (ResultResponse) {}
}

message GetTestRequest {
	         bool   submitted  = 1;
	repeated string test_files = 2;
}

message GetTestResponse {
	string path = 1;
}

message ResultRequest {
	string        path      = 1;
	pet.Testsuite testsuite = 2;
}

message ResultResponse {
}
